# bloom

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  privacy.yml
.github/workflows/: ci.yml  release.yml
docs/releases/: v0.1.0-alpha.1.md
scripts/: collect-tauri-artifacts.mjs  privacy-scan.mjs  verify-release-assets.mjs  verify-release-metadata.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/actions/: mod.rs  validation.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/ollama/: mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/prediction/: mod.rs
src-tauri/src/privacy/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/suggestions/: mod.rs
src-tauri/src/terminal/: mod.rs
src/app/: App.test.tsx  App.tsx
src/components/: CapabilityList.tsx  StatusPill.tsx
src/features/activity/: ActivityView.tsx
src/hooks/: useCompanionData.ts
src/services/: companionApi.ts
src/styles/: global.css
src/types/: domain.ts
(+6 files in other folders)
