[package]
name = "bloom"
version = "0.1.0-alpha.1"
description = "A local-first desktop companion that suggests useful next actions."
authors = ["Bloom contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/vivaanseth/bloom"
repository = "https://github.com/vivaanseth/bloom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
